// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with disabled prop 1`] = `
<input
  className="sc-kEYyzF bdKYpI"
  disabled={true}
/>
`;

exports[`renders correctly with inValid prop 1`] = `
<input
  className="sc-kEYyzF idBrhT"
/>
`;

exports[`renders correctly with no props 1`] = `
<input
  className="sc-kEYyzF fMpxOL"
/>
`;

exports[`renders correctly with valid prop 1`] = `
<input
  className="sc-kEYyzF crifQZ"
/>
`;
